# syn-tool

./: .env.example  instructions.md  pyproject.toml  requirements.txt  setup.py
definitions/mappings/: group_mappings.json
definitions/sap/: group_fields.json  order_fields.json
definitions/shopify/: collection_fields.json  order_fields.json
scripts/: setup_sap_config.py
syn_tool/: __init__.py  __main__.py  cli.py
syn_tool/clients/: __init__.py  sap_client.py  shopify_client.py
syn_tool/commands/: group_commands.py  order_commands.py
syn_tool/core/: config.py  exceptions.py  sync_manager.py  types.py
syn_tool/services/: __init__.py  credit_service.py  group_service.py  order_service.py  payment_service.py  product_service.py  test_service.py
syn_tool/utils/: logger.py  logging.py
